# convertia_llm

./: .gitignore  Dockerfile  pyproject.toml
src/app/: main.py  setup.py
src/app/interface/fastapi/: server.py
src/broker/: main.py  setup.py
src/broker/dependencies/: connection.py  producers.py  setup.py
src/broker/domain/: base_event.py  consumer.py  handlers.py  producer.py  queue_config.py
src/broker/infrastructure/pika/: connection.py  consumer.py  producer.py
src/broker/infrastructure/pikaaio/: async_consumer.py  async_producer.py  connection.py
src/broker/infrastructure/rabbitmq/: connection.py  consumer.py  producer.py
src/di/: container.py  injector.py  setup.py
src/features/communication/: di.py
src/features/communication/broker/: setup.py
src/features/communication/dependencies/: broker.py  setup.py
src/features/communication/domain/: consumers.py
src/features/document_processing/: di.py
src/features/document_processing/broker/: consumers_setup.py  queues_setup.py  setup.py
src/features/embeddings/: di.py
src/features/sessions/: di.py
src/http/: di.py
src/http/dependencies/: clients.py  setup.py
src/http/domain/: async_http_client.py
src/persistence/: di.py
src/persistence/dependencies/: repositories.py  setup.py
src/persistence/domain/: entities.py  vector_repository.py
src/security/: hmac.py
src/security/domain/: exceptions.py
src/tracking/application/: progress_tracker.py
src/tracking/domain/: entites.py
src/websocket/domain/: schemas.py
tests/embeddings/: embed_text_handler.py
(+79 files in other folders)
