[project]
name = "llm-convertia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.8",
    "fastapi>=0.128.0",
    "openai>=2.16.0",
    "pika>=1.3.2",
    "pydantic>=2.12.5",
    "pypdf>=6.6.2",
    "qdrant-client>=1.16.2",
    "redis>=7.1.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest>=9.0.2",
]
